@@ -1,3 +1,11 @@
+2007-05-25  Ali Afshar <aafshar@gmail.com>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* gazpacho-plugin/kiwiwidgets.xml:
+	* kiwi/ui/gazpacholoader.py:
+	Add gazpacho support for ObjectTree, fixes #3389
+
 === 1.9.15 ===
 2007-05-22  Johan Dahlin  <jdahlin@async.com.br>
 
